fix link spacing exp.html

--- a/exp.css
+++ b/exp.css
@@ -6,6 +6,9 @@
   box-sizing: border-box; }
 
 /*remove styling of urls */
+a {
+    padding: 0;
+}
 a,
 a:focus,
 a:active {
